# kanjiApp

./: .firebaserc  .gitignore  pubspec.yaml  pyproject.toml
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
android/app/: build.gradle  google-services.json
ios/: firebase_app_id_file.json
ios/Runner/: GoogleService-Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: auth.dart  firebase_options.dart  main.dart
lib/models/: question.dart
lib/pages/: mistaken_questions.dart  questions.dart  test.dart  top.dart
lib/pages/common/: colors.dart  header.dart
script/: register_to_firebase.py  scrape.py
