[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["ayumu <ayumu4bus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
firebase-admin = "^6.1.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
chardet = "^5.1.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
